--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,16 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.android.support:cardview-v7:26.+'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.firebase:firebase-crash:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
 
 
 
