--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,9 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+//    compile 'com.yarolegovich:sliding-root-nav:1.1.0'
     testCompile 'junit:junit:4.12'
 }
-
-
-
-
 
 
 
