--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'com.android.application'
-
+repositories {
+    jcenter()
+    maven {
+        url 'https://jitpack.io'
+    }
+    maven {
+        url 'https://maven.google.com'
+    }
+}
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
@@ -33,7 +41,7 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-//    compile 'com.yarolegovich:sliding-root-nav:1.1.0'
+    compile 'com.yarolegovich:sliding-root-nav:1.1.0'
     testCompile 'junit:junit:4.12'
 }
 
