Dheeraj first Commit-06/10/2017

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,9 @@
             android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="sensorPortrait"></activity>
+            android:screenOrientation="sensorPortrait" />
+        <activity android:name=".CheckOutActivity" />
+        <activity android:name=".FoodActivity"></activity>
     </application>
 
 </manifest>
