--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,13 @@
             android:name=".MainActivity"
             android:screenOrientation="sensorPortrait" />
         <activity android:name=".CheckOutActivity" />
-        <activity android:name=".FoodActivity"></activity>
+        <activity android:name=".FoodActivity" />
+        <activity android:name=".BreakFastActivity" />
+        <activity android:name=".SignupActivityOne" />
+        <activity android:name=".SignupActivityTwo" />
+        <activity android:name=".SignupActivityThree" />
+        <activity android:name=".SignupActivityFour" />
+        <activity android:name=".AllActivity"></activity>
     </application>
 
 </manifest>
