--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     compile 'com.android.support:support-v4:26.+'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.daimajia.slider:library:1.1.5@aar'
+//    compile 'com.daimajia.slider:library:1.1.5@aar'
+    compile 'com.ss.bannerslider:bannerslider:1.8.0'
     testCompile 'junit:junit:4.12'
 }
 
