--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--<meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCQ4-nqC85wyQtTBd9ZqrAxJ9t1SBRz-0U" />-->
 
         <service android:name=".MyFirebaseInstanceIDService">
             <intent-filter>
