--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
 //    compile 'com.daimajia.slider:library:1.1.5@aar'
     compile 'com.ss.bannerslider:bannerslider:1.8.0'
+    compile 'com.wang.avi:library:2.1.3'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
+    compile 'com.orhanobut:dialogplus:1.11@aar'
     testCompile 'junit:junit:4.12'
 }
 
