Dheeraj first Commit-15/10/2017

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,9 @@
         <activity
             android:name=".SettingsActivity"
             android:screenOrientation="sensorPortrait"></activity>
+        <activity
+            android:name=".VegetableActivity"
+            android:screenOrientation="sensorPortrait"></activity>
     </application>
 
 </manifest>
