--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile 'com.wang.avi:library:2.1.3'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
     compile 'com.orhanobut:dialogplus:1.11@aar'
+    compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     testCompile 'junit:junit:4.12'
 }
 
