--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name=".application.MyApp"
@@ -22,6 +23,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginSignupActivity"
+            android:screenOrientation="sensorPortrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,6 +50,9 @@
 
         <activity
             android:name=".LoginActivity"
+            android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".NeedHelp"
             android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".SigninActivityOne"
@@ -98,7 +103,8 @@
         <activity
             android:name=".VegetableActivity"
             android:screenOrientation="sensorPortrait" />
-        <activity android:name=".ItemDetailActivity"></activity>
+        <activity android:name=".ItemDetailActivity" />
+        <activity android:name=".MoreActivity"></activity>
     </application>
 
 </manifest>
