--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
     compile 'com.orhanobut:dialogplus:1.11@aar'
     compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
-    compile 'com.github.florent37:singledateandtimepicker:1.1.0'
+    compile 'cn.aigestudio.wheelpicker:WheelPicker:1.1.2'
     compile 'devlight.io:navigationtabbar:1.2.5'
     testCompile 'junit:junit:4.12'
 }
