--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,11 @@ repositories {
     }
 }
 android {
+    lintOptions {
+        checkReleaseBuilds false
+    }
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.localfriend"
         minSdkVersion 16
