--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginSignupActivity"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -52,6 +51,18 @@
             android:name=".LoginActivity"
             android:screenOrientation="sensorPortrait" />
         <activity
+            android:name=".ChangePasswordActivity"
+            android:screenOrientation="sensorPortrait" />
+         <activity
+            android:name=".FeedbackActivity"
+            android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".TrackOrderActivity"
+            android:screenOrientation="sensorPortrait" />
+        <activity
             android:name=".NeedHelp"
             android:screenOrientation="sensorPortrait" />
         <activity
@@ -65,12 +76,16 @@
             android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".CheckOutActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="sensorPortrait" />
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".OrderPlacedActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="sensorPortrait" />
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="stateHidden" />
+       <activity
+            android:name=".ProfileActivity"
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".FoodActivity"
             android:screenOrientation="sensorPortrait" />
