--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,14 @@ repositories {
     }
 }
 android {
+    signingConfigs {
+        config {
+            keyAlias 'LocalFriend'
+            keyPassword '111111'
+            storeFile file('D:/Android/wdh/lf_ley.jks')
+            storePassword '111111'
+        }
+    }
     lintOptions {
         checkReleaseBuilds false
     }
@@ -18,8 +26,8 @@ android {
         applicationId "com.localfriend"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,15 +35,17 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            signingConfig signingConfigs.config
+        }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     //    compile 'com.daimajia.slider:library:1.1.5@aar'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
@@ -53,7 +63,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.yarolegovich:sliding-root-nav:1.1.0'
     compile 'com.android.support:support-v4:26.+'
-    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.ss.bannerslider:bannerslider:1.8.0'
     compile 'com.wang.avi:library:2.1.3'
@@ -62,6 +72,8 @@ dependencies {
     compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     compile 'cn.aigestudio.wheelpicker:WheelPicker:1.1.2'
     compile 'devlight.io:navigationtabbar:1.2.5'
+    compile 'com.jaredrummler:material-spinner:1.2.1'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     testCompile 'junit:junit:4.12'
 }
 
