--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "com.localfriend"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 2
-        versionName "1.1"
+        versionCode 5
+        versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -57,23 +57,22 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:11.0.2'
     compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.google.android.gms:play-services-auth:11.0.2'
-    compile 'com.google.android.gms:play-services-location:11.0.2'
     compile 'com.google.android.gms:play-services-maps:11.0.2'
-    compile 'com.google.android.gms:play-services-places:11.0.2'
+    compile 'com.google.android.gms:play-services-location:11.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.yarolegovich:sliding-root-nav:1.1.0'
     compile 'com.android.support:support-v4:26.+'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.nineoldandroids:library:2.4.0'
+//    compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.ss.bannerslider:bannerslider:1.8.0'
-    compile 'com.wang.avi:library:2.1.3'
+//    compile 'com.wang.avi:library:2.1.3'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
     compile 'com.orhanobut:dialogplus:1.11@aar'
     compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     compile 'cn.aigestudio.wheelpicker:WheelPicker:1.1.2'
-    compile 'devlight.io:navigationtabbar:1.2.5'
-    compile 'com.jaredrummler:material-spinner:1.2.1'
+//    compile 'devlight.io:navigationtabbar:1.2.5'
+//    compile 'com.jaredrummler:material-spinner:1.2.1'
     compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'us.feras.mdv:markdownview:1.1.0'
     testCompile 'junit:junit:4.12'
 }
 
