--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         <activity
             android:name=".ChangePasswordActivity"
             android:screenOrientation="sensorPortrait" />
-         <activity
+        <activity
             android:name=".FeedbackActivity"
             android:screenOrientation="sensorPortrait" />
         <activity
@@ -82,7 +82,15 @@
             android:name=".OrderPlacedActivity"
             android:screenOrientation="sensorPortrait"
             android:windowSoftInputMode="stateHidden" />
-       <activity
+        <activity
+            android:name=".MonthlyPackageListActivity"
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".SubscriptionCheckOutActivity"
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
             android:name=".ProfileActivity"
             android:screenOrientation="sensorPortrait"
             android:windowSoftInputMode="stateHidden" />
@@ -100,8 +108,8 @@
             android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".SignupActivityThree"
-            android:windowSoftInputMode="stateVisible"
-            android:screenOrientation="sensorPortrait" />
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="stateVisible" />
         <activity
             android:name=".SignupActivityFour"
             android:screenOrientation="sensorPortrait" />
@@ -124,11 +132,12 @@
         <activity
             android:name=".VegetableActivity"
             android:screenOrientation="sensorPortrait" />
-         <activity
+        <activity
             android:name=".SplashActivity"
             android:screenOrientation="sensorPortrait" />
         <activity android:name=".ItemDetailActivity" />
         <activity android:name=".MoreActivity"></activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.localfriend.provider"
@@ -139,8 +148,9 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <meta-data android:name="com.localfriend.GlideConfiguration"
-            android:value="GlideModule"/>
+        <meta-data
+            android:name="com.localfriend.GlideConfiguration"
+            android:value="GlideModule" />
     </application>
 
 </manifest>
