--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginSignupActivity"
+            android:name=".ScheduleMealActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -141,7 +142,7 @@
             android:name=".SplashActivity"
             android:screenOrientation="sensorPortrait" />
         <activity android:name=".ItemDetailActivity" />
-        <activity android:name=".MoreActivity"></activity>
+        <activity android:name=".MoreActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -156,6 +157,8 @@
         <meta-data
             android:name="com.localfriend.GlideConfiguration"
             android:value="GlideModule" />
+
+        <activity android:name=".LoginSignupActivity"></activity>
     </application>
 
 </manifest>
