--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ScheduleMealActivity"
+            android:name=".LoginSignupActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait">
             <intent-filter>
@@ -158,7 +158,7 @@
             android:name="com.localfriend.GlideConfiguration"
             android:value="GlideModule" />
 
-        <activity android:name=".LoginSignupActivity"></activity>
+        <activity android:name=".ScheduleMealActivity"></activity>
     </application>
 
 </manifest>
