--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,16 +23,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ScheduleMealActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="sensorPortrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+
         <!--
             <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -158,7 +150,15 @@
             android:name="com.localfriend.GlideConfiguration"
             android:value="GlideModule" />
 
-        <activity android:name=".LoginSignupActivity"></activity>
+        <activity android:name=".ScheduleMealActivity">
+
+        </activity>
+        <activity android:name=".LoginSignupActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
