--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
         checkReleaseBuilds false
     }
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.localfriend"
         minSdkVersion 16
@@ -42,40 +42,41 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/PGSDK_V2.1.jar')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //    compile 'com.daimajia.slider:library:1.1.5@aar'
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.android.support:cardview-v7:26.+'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.google.firebase:firebase-crash:11.0.2'
-    compile 'com.google.firebase:firebase-messaging:11.0.2'
-    compile 'com.google.firebase:firebase-auth:11.0.2'
-    compile 'com.google.android.gms:play-services-auth:11.0.2'
-    compile 'com.google.android.gms:play-services-maps:11.0.2'
-    compile 'com.google.android.gms:play-services-location:11.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.yarolegovich:sliding-root-nav:1.1.0'
-    compile 'com.android.support:support-v4:26.+'
-//    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.ss.bannerslider:bannerslider:1.8.0'
-//    compile 'com.wang.avi:library:2.1.3'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
-    compile 'com.orhanobut:dialogplus:1.11@aar'
-    compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
-    compile 'cn.aigestudio.wheelpicker:WheelPicker:1.1.2'
-//    compile 'devlight.io:navigationtabbar:1.2.5'
-//    compile 'com.jaredrummler:material-spinner:1.2.1'
-    compile 'me.bendik.simplerangeview:simplerangeview:0.2.0'
-    compile 'com.edmodo:rangebar:1.0.0'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
-    compile 'us.feras.mdv:markdownview:1.1.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.google.firebase:firebase-crash:11.0.2'
+    implementation 'com.google.firebase:firebase-messaging:11.0.2'
+    implementation 'com.google.firebase:firebase-auth:11.0.2'
+    implementation 'com.google.android.gms:play-services-auth:11.0.2'
+    implementation 'com.google.android.gms:play-services-maps:11.0.2'
+    implementation 'com.google.android.gms:play-services-location:11.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.yarolegovich:sliding-root-nav:1.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    //    compile 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.ss.bannerslider:bannerslider:1.8.0'
+    //    compile 'com.wang.avi:library:2.1.3'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
+    implementation 'com.orhanobut:dialogplus:1.11@aar'
+    implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
+    implementation 'cn.aigestudio.wheelpicker:WheelPicker:1.1.2'
+    //    compile 'devlight.io:navigationtabbar:1.2.5'
+    //    compile 'com.jaredrummler:material-spinner:1.2.1'
+    implementation 'me.bendik.simplerangeview:simplerangeview:0.2.0'
+    implementation 'com.edmodo:rangebar:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'us.feras.mdv:markdownview:1.1.0'
+    testImplementation 'junit:junit:4.12'
 }
 
 
