--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,6 +131,10 @@
             android:name=".VegetableActivity"
             android:screenOrientation="sensorPortrait" />
         <activity
+            android:name=".OrganisationActivity"
+            android:screenOrientation="sensorPortrait" />
+
+        <activity
             android:name=".SplashActivity"
             android:screenOrientation="sensorPortrait" />
         <activity android:name=".ItemDetailActivity" />
@@ -159,6 +163,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.paytm.pgsdk.PaytmPGActivity"
+            android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation|keyboard"/>
+
     </application>
 
 </manifest>
