--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         config {
             keyAlias 'LocalFriend'
             keyPassword '111111'
-            storeFile file('/home/avinash/Desktop/Office Backup/Avinash_Etamine/lf_ley.jks')
+            storeFile file('F:/Android/wdh/lf_ley.jks')
             storePassword '111111'
         }
     }
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.edmodo:rangebar:1.0.0'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'us.feras.mdv:markdownview:1.1.0'
+    implementation 'com.williamww:silky-signature:0.1.0'
     testImplementation 'junit:junit:4.12'
 }
 
